<resources>
    <string name="app_name">PickPal</string>
    <string name="dismiss">Dismiss</string>
    <string name="view_more">View More</string>
    <string name="title_of_the_post">Title of the Post</string>
    <string name="username">Username</string>
    <string name="user_icon">User Icon</string>
    <string name="delete">Delete</string>
    <string name="back_button" />
    <string name="moderator_dashboard">Moderator Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="moderator_dashboard_btn">Moderator Dashboard</string>
    <string name="username_tag">\@woofPawple</string>

    <string-array name="club_choices">
        <item>Select Club</item>
        <item>Feed</item>
        <item>Anime</item>
        <item>Music</item>
        <item>Horror Movies</item>
        <item>Manila Cafes</item>
        <item>Justin Bieber Fans Club</item>
    </string-array>

    <string-array name="gender_array">
        <item>-Select your gender-</item>
        <item>Male</item>
        <item>Female</item>
        <item>Rather Not Say</item>
    </string-array>

</resources>