<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/report"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="5dp"
    app:cardCornerRadius="20dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- User Info Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- User Icon -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/user_pic"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <!-- User Name -->
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Post Title -->
        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/title_of_the_post"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- View More Button -->

            <!-- Delete Button -->
            <Button
                android:id="@+id/view_more_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/view_more_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <!-- Delete Button -->
            <Button
                android:id="@+id/delete_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_button"
                android:fontFamily="@font/poppins_semibold"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_marginStart="55dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <!-- Dimiss Button -->
            <Button
                android:id="@+id/dismiss_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/dismiss_button"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/dismiss"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
