<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/lilac">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lilac"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_button"
            android:contentDescription="@string/back_button" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:src="@drawable/user_pic"
            android:contentDescription="@string/user_icon"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moderator_dashboard"
        android:textColor="@color/purple"
        android:textSize="42sp"
        android:layout_gravity="start"
        android:lineSpacingMultiplier="0.8"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp" />

    <!-- RecyclerView for displaying reports -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_reports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        tools:listitem="@layout/report_list"
        android:padding="8dp"
        android:clipToPadding="false" />

</LinearLayout>
